--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ local.properties
 
 # Locally stored "Eclipse launch configurations"
 *.launch
+**/.classpath
+**/.project
 
 # PyDev specific (Python IDE for Eclipse)
 *.pydevproject
